Fix story photo crop direction on mobile

--- a/components/OurStorySection.module.css
+++ b/components/OurStorySection.module.css
@@ -109,7 +109,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: 70% 20%;
+    object-position: 30% 20%;
   }
 
   .storyRight {
